_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

/** Variables **********************************************/
$horizontal-spacing-unit:       50px;
$vertical-spacing-unit:         40px;

/* portfolio tinkering */
$img_spacing: 5px;
$img_height: 275px;
$caption_font_size: 12px;
$caption_color: #aaa;


/* Set theme color *************************/
$theme-color:   $background-color;


/************************************************************/


/**
 * Basic styling
 */
body {
    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
    color: $text-color;
    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
    -webkit-font-feature-settings: "kern" 1;
    -moz-font-feature-settings: "kern" 1;
    -o-font-feature-settings: "kern" 1;
    font-feature-settings: "kern" 1;
    font-kerning: normal;
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}

.alignright {
    float: right;
}


hr{
    /* Inset, by Dan Eden */
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);

}

/**
 * Images
 */
.baseimg {
    max-width: 100%;
    vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
    color: $brand-color;
    text-decoration: none;

    &:visited {
        color: darken($brand-color, 15%);
    }

    &:hover {
        color: $text-color;
        text-decoration: underline;
    }
}



/**
 * Blockquotes
 */
blockquote {
    color: $grey-color;
    border-left: 4px solid $grey-color-light;
    padding-left: $spacing-unit / 2;
    font-size: 18px;
    letter-spacing: -1px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: auto;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
            fill: $grey-color;
        }
    }
}

.icon--rss {

    > svg {

        path {
            fill: #FFFFFF;
        }
    }
}

/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}


/**
 * custom well-behaved image box on front page and project pages
 */
 .container{
     display: flex;
 }
 .fixed{

 }
 .flex-item{
     flex-grow: 0.5;
 }

.gist .csv-data  {
  overflow:auto;
  max-height:350px;
}

.gist .file {
  max-height:400px;
  overflow:auto !important;
}

.gist .type-csv {
  overflow:hidden !important;
}

/**
 * Collapsible div
 */

 .collapsible {
   background-color: #777;
   color: white;
   cursor: pointer;
   padding: 18px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
   font-size: 15px;
 }

 .active, .collapsible:hover {
 }

 .content {
   padding: 0 18px;
   display: none;
   overflow: hidden;
 }

/* efflux page */

button.efflux {
  flex-grow:1;
  flex-basis:0;
  cursor:pointer;
  margin:0 10px 0 10px;
  padding:5px 5px 5px 5px;
  border:1px solid black;
  background-color: transparent;
  border-radius:8px;
}
button.efflux:hover {
  background-color: #E8E8E8;
  /* border:2px solid black; */
  /* background-color: black;
  color: white; */
}

details.lollipop > summary {
  list-style-type: "";
  display: -webkit-flex;
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: margin 150ms ease-out;
  padding-bottom: 0px;
  margin-left: 0.625em;
  border-left: 2px solid transparent;
}

details.lollipop > summary:hover {
  text-decoration: underline;
}


details.lollipop summary > * {
  display: inline;
}

details.lollipop > summary:before {
  content: url("data:image/svg+xml; utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' height='2em' width='1.25em' %3E%3Ctext x='50%25' y='50%25' font-size='1.9em' dominant-baseline='middle' text-anchor='middle'%3E⎉%3C/text%3E%3C/svg%3E");
  margin-right: 5px;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  font-weight: bold;
  margin-left: -0.625em;
}

details[open].lollipop > summary:before {
  content: url("data:image/svg+xml; utf8, %3Csvg xmlns='http://www.w3.org/2000/svg' height='2em' width='1.25em' %3E%3Ctext x='50%25' y='50%25' font-weight='bold' font-size='x-large' dominant-baseline='middle' text-anchor='middle'%3E◉%3C/text%3E%3C/svg%3E");
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-right: 5px;
  margin-left: -0.625em;
}

summary.lollipop::-webkit-details-marker {
  list-style-type: "";
}

details.lollipop[open] > summary {
  list-style-type: "";
  transition: padding 150ms ease-out;
  padding-bottom: 10px;
  margin-left: 0.625em;
  border-left: 2px solid;
  border-image: linear-gradient(to top, black 0 50%, transparent 50% 100%) 1 100%;
}

.lollipop-detail {
  margin-left: 0.625em;
  border-left: solid 2px;
  padding-left: 10px;
}

@keyframes details-show {
  from {
    opacity: 0;
  }
}

details[open].lollipop > *:not(summary) {
  animation: details-show 150ms ease-in-out;
}

.exit-cursor {
  cursor: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="font-size: 25px; font-weight: bold; paint-order: stroke; stroke: %23ffffff; stroke-width: 5px; stroke-linecap: butt; stroke-linejoin: miter; font-weight: 800;"%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle"%3E🗙%3C/text%3E%3C/svg%3E'), auto;
}

.escape-cursor {
  cursor: url('data:image/svg+xml;utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style="font-size: 25px; font-weight: bold; paint-order: stroke; stroke: %23ffffff; stroke-width: 5px; stroke-linecap: butt; stroke-linejoin: miter; font-weight: 800;"%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle"%3E⎋%3C/text%3E%3C/svg%3E'), auto;
}

